--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item ">
-                        <a class="nav-link active" aria-current="page" href="https://wa.me/918437746203/?text=Hi Sam, Whatsup"><i class="fa-brands fa-whatsapp"></i></a>
+                        <a class="nav-link active" aria-current="page" href="https://wa.me/918437746203/?text=Hi Sam, Whatsup"><i class="fa-brands fa-whatsapp">Whatsapp</i></a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link active" aria-current="page" href="mailto:Lakhwindersmith203@gmail.com"><i
